# 3DCOREweb

./: .gitignore  Example.ipynb  Fluxropetypes.ipynb  Grid_3DCORE.ipynb  LICENSE  README.md  Showcase_Synthetic_Signatures.ipynb  Signatures_Paper.ipynb  pyproject.toml  requirements.txt  setup.cfg
cache/: cache.db
src/coreweb/: __init__.py  fluxplot.py  model.py  rotqs.py
src/coreweb/dashcore/: app.py  dataDONKI.json  main.py
src/coreweb/dashcore/assets/: config_sliders.py
src/coreweb/dashcore/data/: DONKI.json  spacetable.csv
src/coreweb/dashcore/data/uploaded/: examplesyn.p
src/coreweb/dashcore/pages/: About.py  Fit.py  Plot.py  Start.py
src/coreweb/dashcore/temp/202311161711/: fig.mov
src/coreweb/dashcore/temp/202311161739/: fig.mov
src/coreweb/dashcore/utils/: heliocats.py  main_fitting.py  maputils.py  plotting.py  twist_plot.py  utils.py
src/coreweb/methods/: __init__.py  abc_smc.py  coresat.py  customsat.py  dash_abc_smc.py  data.py  data_frame_transforms.py  method.py  offwebutils.py
src/coreweb/models/: __init__.py
src/coreweb/models/distorted/: __init__.py  distorted_shape.py  parameters.json
src/coreweb/models/toroidal/: __init__.py  parameters.json  thin_torus.py
