[metadata]
name = 3DCOREweb
author = Hannah T. Ruedisser, Andreas J. Weiss, Ute V. Amerstorfer
author_email = hannah@ruedisser.at, ajefweiss@gmail.com, ute.amerstorfer@geosphere.at
description = Reconstruct CMEs using the 3D Coronal Rope Ejection Model (adapted from https://github.com/ajefweiss/py3DCORE)
url = https://github.com/helioforecast/py3DCORE
version = attr: coreweb.__version__
keywords =
    astrophysics
    solar physics
    space weather
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10.10
install_requires =
    astropy>=5.2.2
    astroquery>=0.4.6
    astrospice>=0.2.1
    cdflib>=0.4.9
    celery>=5.3.1
    dash>=2.10.2
    dash-ag-grid>=2.2.0
    dash-bootstrap-components>=1.4.1
    dash-core-components>=2.0.0
    dash-html-components>=2.0.0
    dash-iconify>=0.1.2
    dash-mantine-components>=0.12.1
    dash-table>=5.0.0
    h5py>=3.8.0
    HelioPy>=0.15.4
    heliosat>=0.8.3
    heliosat[NUMBA]
    json5>=0.9.6
    numba>=0.56.4
    numpy>=1.23.5
    pandas>=1.5.3
    plotly>=5.14.1
    plotly-express>=0.4.1
    scipy>=1.10.1
    seaborn>=0.12.2
    spiceypy>=5.1.2
    sunpy>=4.1.4

[options.packages.find]
where = src


[flake8]
max-line-length = 120
max-complexity = 12
allow-star-arg-any = yes
suppress-dummy-args = yes
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/,.scripts
ignore = W503,ANN101
per-file-ignores =
    __init__.py: F401


[options.entry_points]
console_scripts =
    3DCOREweb = coreweb.dashcore.main:start_function